--- a/explorer/templates/explorer/case-study.html
+++ b/explorer/templates/explorer/case-study.html
@@ -113,6 +113,11 @@
     text-align: right;
 }
 
+.serol-bg {
+    background: url({% static 'explorer/images/serol-side-panel.png' %}) no-repeat;
+    background-position: bottom 10px right 10px;
+}
+
 /* Media queries - Responsive timeline on screens less than 600px wide */
 @media screen and (max-width: 600px) {
 /* Place the timelime to the left */
@@ -180,6 +185,7 @@
     </div>
 </section>
 
+<div class="serol-bg">
 <div class="timeline">
     <div class="first timewrapper left">
       <div class="timecontent">
@@ -325,5 +331,6 @@
           </p>
        </div>
       </div>
+    </div>
     </div>
 {% endblock %}
