--- a/explorer/templates/explorer/base.html
+++ b/explorer/templates/explorer/base.html
@@ -186,8 +186,16 @@
         $('.messages').toggle()
       })
       $('.delete').on('click', clear_messages)
-    });
 
+        // Check for click events on the navbar burger icon
+          $(".navbar-burger").click(function() {
+
+        // Toggle the "is-active" class on both the "navbar-burger" and the "navbar-menu"
+        $(".navbar-burger").toggleClass("is-active");
+        $(".navbar-menu").toggleClass("is-active");
+
+        });
+    });
 
   {% if readonly %}
 
