--- a/explorer/templates/explorer/challenge-observe.html
+++ b/explorer/templates/explorer/challenge-observe.html
@@ -71,7 +71,7 @@ var csrftoken = '{{ csrf_token }}';
 var challenge_id = '{{object.id}}'
 var redirect_url = "{% url 'challenge' object.id %}";
 var image_file = image_files[category];
-var whatsupurl = "https://whatsup.lco.global/range/?aperture=0m4&mode=best";
+var whatsupurl = "https://whatsup.lco.global/range/?aperture=0m4&mode=best&site=coj,ogg,elp,cpt";
 var target_type;
 
 function add_targets(i, data){
